--- a/starsProject/src/Components/Header.css
+++ b/starsProject/src/Components/Header.css
@@ -1,30 +1,30 @@
 .headerContainer {
   display: flex;
-align-items: flex-start;
-justify-content: center;
+  align-items: center;
+  justify-content: center;
   background-image: url("./universe.jpeg");
   background-size: cover;
   background-position: center;
   height: 15vh;
   padding: 5rem;
-
-
 }
 .header {
-  text-align: center;
   font-size: 2.5rem;
   color: black;
-  margin-top: auto;
-  padding: 2rem;
+  margin-left: 5rem;
+  margin-right: 5rem;
 }
 
 .headerText {
   height: 10hv;
   background-color: white;
+  border-radius: 25px;
+  padding: 1rem;
+  outline: 2px solid black;
 }
 
 .subTitle {
   font-size: 1.2rem;
   text-align: center;
-  color: cornflowerblue;
+  color: rgb(14, 120, 200);
 }
