--- a/starsProject/src/Components/Button/Card.css
+++ b/starsProject/src/Components/Button/Card.css
@@ -1,8 +1,21 @@
-.card {
-  display: grid;
-
-
-  padding: 10px 20px;
-  border-radius: 5px;
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 5px;
+  margin: 1% 30%;
+ 
 }
 
+.card-item {
+  flex-basis: calc(33.33% - 10px);
+  margin-bottom: 15px;
+  padding: 20px;
+  box-sizing: border-box;
+  width: 60%;
+  text-align: center;
+  border: 1px solid #000000;
+  border-radius: 5px;
+  font-size: large;
+
+}
