--- a/starsProject/src/Components/Button/Card.css
+++ b/starsProject/src/Components/Button/Card.css
@@ -1,9 +1,17 @@
+
+.container {
+  display: flex;
+  margin-right: 2%;
+
+
+}
+
 .card-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   gap: 5px;
-  margin: 1% 30%;
+  margin: 1% 20%;
  
 }
 
@@ -17,5 +25,14 @@
   border: 1px solid #000000;
   border-radius: 5px;
   font-size: large;
+
+}
+
+.img-container{
+margin-right: 2%;
+
+}
+
+.img{
 
 }
