working with the carddetails component

--- a/starsProject/src/Components/Card/Card.css
+++ b/starsProject/src/Components/Card/Card.css
@@ -8,12 +8,12 @@
   flex-wrap: wrap;
   justify-content: space-between;
   gap: 5px;
-  margin: 1% 20%;
+  margin: 1% 20% 0;
 }
 
 .card-item {
   flex-basis: calc(33.33% - 10px);
-  margin-bottom: 15px;
+  margin-bottom: 10px;
   padding: 20px;
   box-sizing: border-box;
   width: 60%;
