--- a/starsProject/src/Components/Card/CardDetails/CardDetails.css
+++ b/starsProject/src/Components/Card/CardDetails/CardDetails.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: center;
   height: 30vh;
-  width: 60vh;
+  width: 50vh;
   margin-top: 2rem;
   gap: 1.5rem;
   background-color: rgb(221, 148, 37);
@@ -17,11 +17,12 @@
   gap: 2rem;
   background-color: white;
   border-radius: 15px;
-  margin: 9rem;
+  margin: 1rem;
+  height: 25vh;
 }
 
 .cd-img {
-  height: 15rem;
-  width: 15rem;
+  max-height: 45vh;
+  max-width: 15rem;
   margin-left: 2rem;
 }
