--- a/starsProject/src/Components/Suggestion/Suggest.css
+++ b/starsProject/src/Components/Suggestion/Suggest.css
@@ -2,6 +2,10 @@
     margin-bottom: 5rem;
     width: 40%;
     margin-left: 3%;
+    background-color: bisque;
+    padding: 2%;
+    border-radius: 10px;
+    margin-bottom: 5rem;
 
 }
 
@@ -11,7 +15,7 @@
     height: 180px;
     gap: 15px;
     margin: 2rem 0 5%; 
-     
+    
 }
 
 .btn{
